# Live_Voting_App

./: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 798d8d480e66_create_initial_tables.py
app/: database.py  main.py
app/core/: deps.py  security.py  ws_manager.py
app/models/: __init__.py  option.py  poll.py  user.py  vote.py
app/routers/: auth.py  poll.py
app/schemas/: auth.py  poll.py  user.py
frontend/src/: App.tsx  api.ts  index.css
tests/: conftest.py  test_polls.py  test_webscoket.py
